refactor(api): ♻️ 优化集群租户管理功能
重构集群租户管理相关代码，主要变更包括：
1. 调整Controller层返回类型为统一VO对象
2. 实现Service层与DAO层的解耦，改用MyBatis-Flex原生查询方法
3. 优化租户列表查询的分页实现
4. 增强参数校验和异常处理
5. 使用Converter实现DTO/VO转换

涉及文件：
- ClusterTenantController.java
- ClusterTenantServiceImpl.java
- ClusterTenantMapper.java

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>